--- a/assets/css/imports/base.css
+++ b/assets/css/imports/base.css
@@ -14,7 +14,7 @@ body {
 }
 
 nav {
-    background: #7e4ed3;
+    background: #13cd4a;
     border-radius: 0 0 16px 16px;
 }
 
@@ -64,7 +64,7 @@ p {
 }
 
 section.about {
-    background: #7e4ed3;
+    background: #13cd4a;
     color: #fff;
     padding: 3rem 0 5rem 0;
     border-radius: 0 0 1rem 1rem;
@@ -88,7 +88,7 @@ section.about:after {
     content: '';
     width: 120%;
     height: 200px;
-    background: #7e4ed3;
+    background: #13cd4a;
     position: absolute;
     left: -3rem;
     top: -2.4rem;
@@ -112,7 +112,7 @@ section.skills ul li {
 
 section.skills ul li span {
     color: #fff;
-    background: #7e4ed3;
+    background: #13cd4a;
     border-radius: 100rem;
     padding: 0.3rem 1rem;
     display: block;
@@ -125,7 +125,7 @@ section.skills ul li span:hover {
 }
 
 footer {
-    background: #7e4ed3;
+    background: #13cd4a;
     padding: 2rem 0;
     color: #fff;
     text-align: center;
