--- a/assets/css/imports/helpers.css
+++ b/assets/css/imports/helpers.css
@@ -14,7 +14,7 @@
 }
 
 .text-primary {
-    color: #7e4ed3;
+    color: #317AE1;
 }
 
 .btn {
@@ -22,7 +22,7 @@
     padding: 0.6rem 2rem;
     border-radius: 0.6rem;
     display: block;
-    background: #7e4ed3;
+    background: #317AE1;
     width: max-content;
 }
 
