--- a/assets/css/imports/base.css
+++ b/assets/css/imports/base.css
@@ -14,7 +14,7 @@ body {
 }
 
 nav {
-    background: #13cd4a;
+    background: #006EE6FF;
     border-radius: 0 0 16px 16px;
 }
 
@@ -64,7 +64,7 @@ p {
 }
 
 section.about {
-    background: #13cd4a;
+    background: #006EE6;
     color: #fff;
     padding: 3rem 0 5rem 0;
     border-radius: 0 0 1rem 1rem;
@@ -76,7 +76,7 @@ section.about:before {
     content: '';
     width: 700px;
     height: 200px;
-    background: rgba(126, 78, 211, 0.5);
+    background: #006EE685;
     position: absolute;
     right: -3rem;
     top: -3rem;
@@ -88,7 +88,7 @@ section.about:after {
     content: '';
     width: 120%;
     height: 200px;
-    background: #13cd4a;
+    background: #006EE6;
     position: absolute;
     left: -3rem;
     top: -2.4rem;
@@ -97,7 +97,7 @@ section.about:after {
 }
 
 a {
-    color: #33D1C5;
+    color: #006EE6;
 }
 
 section.skills {
@@ -105,14 +105,14 @@ section.skills {
 }
 
 section.skills ul li {
-    background: rgba(126, 78, 211, 0.1);
+    background: #006EE617;
     border-radius: 100rem;
     margin: 0.5rem 0;
 }
 
 section.skills ul li span {
     color: #fff;
-    background: #13cd4a;
+    background: #006EE6;
     border-radius: 100rem;
     padding: 0.3rem 1rem;
     display: block;
@@ -125,7 +125,7 @@ section.skills ul li span:hover {
 }
 
 footer {
-    background: #13cd4a;
+    background: #006EE6;
     padding: 2rem 0;
     color: #fff;
     text-align: center;
@@ -171,11 +171,11 @@ ul.social li a{
 }
 
 ul.social li a:hover{
-    color: #7e4ed3;
+    color: #006EE6;
 }
 
 ul.social li a i {
-    color: #7e4ed3;
+    color: #006EE6;
     margin-right: 1rem;
     font-size: 2rem;
 }
